* Added Traditional Chinese support [Thanks to ayamomiji]
* Include padrino-cache gem as part of standard install
* Added Rake Task for Mongoid
* Ensure project name are valid
* Removed erubis support
* Improves select_tag 'selected' option
* Basic nested form support
* Updated mongoid adapter to use 2.0.0.beta.20
* Remove legacy bundler setup from config/boot.rb

== 0.9.20

* Removed Rspec1 generator
* Upgraded router to 0.5.0
* Allow adding middlewares in front of the router
* Fixed DataMapper Admin Adapter and Encrypt Passwords
* Changed default ActiveRecord config with :reconnect => true
* Added basic erubis support to the admin
* Require only require 'spec_helper' in rspec tests
* Added padrino-cache to our padrino meta-gem
* Removed mount_core
* Fix camelized model names in model generation
* Added slim renderer component
* Now the content format can be set explicitly in a param [Thanks to Qzio]
* Fixed I18n load_path [Thanks to Pirj]
* Updated column proprieties for DataMapper
* Now Mounter accept namespaced applications [Thanks to Mcmire]
* Updated ar:translate to be more compat with AS 3.+
* remove strict_format in layouts to work with Sinatra as a standalone
* Change Padrino Admin to generate model in own app, not default generated app.
* Sinatra 1.1.2 Compat
* Test compatibility with Sinatra 1.1.0 and 1.1.2
* Fixed spaces in asset_path

== 0.9.19

* Sinatra 1.1 compat
* Fixed destroy admin/app/page [Thanks to Sob]
* Fixed couchrest dependencies [Thanks to 21studios]
* Added a basic index file [Thanks to 21studios]
* Now Admin password are undecryptable [Thanks to Sob]
* Arrayify keys for invalidation in padrino-cache
* Fixed few typos errors [Thanks to Philtr]
* Fix conflict on seeds.rb when generating admin [Thanks to Spllr]
* Correct path in spec [Thanks to Spllr]
* Bypass admin login in development
* Norwegian translation [Thanks to Fossmo]
* Updated generator for new rspec version [Thanks to Rosstimson]